--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     margin: 0 auto;
     background-color: #fff;
     padding: 30px;
+    border: 2px solid #333;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
@@ -27,14 +28,16 @@ h1 {
 }
 p {
     font-size: 1.5em;
-    margin-bottom: 20px;
+    margin-bottom: 100px;
+    text-align: center;
 }
 ul {
-    list-style-type: none;
-    margin-left: 0;
-    margin-bottom: 20px;
+    list-style-type: disc;
+    margin-left: 8px;
+    margin-bottom: 100px;
 }
 li {
     font-size: 1.5em;
     margin-bottom: 8px;
+    margin-left: 50px;
 }
